--- a/style.css
+++ b/style.css
@@ -716,7 +716,7 @@ img {
         color: #000000; }
       .single-event-area:hover .event-text .see-more-btn, .single-event-area:focus .event-text .see-more-btn {
         border-bottom-color: #000000;
-        color: #000000; }
+        color: #D23333; }
 
 /* :: 8.0 Newsletter Area CSS */
 .newsletter-area {
